Fix the background on Safari

--- a/src/index.scss
+++ b/src/index.scss
@@ -36,13 +36,22 @@ footer {
   position: relative;
   width: 100%;
   height: 100%;
+  background-color: #f7f6f2;
+}
+
+// Make sure the main content is on top of the background
+.backgroundWrap > div {
+  position: relative;
+  z-index: 2;
+}
+.backgroundWrap > svg {
+  z-index: 1;
 }
 
 body {
   font-family: Verdana, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f7f6f2;
 }
 
 @include media-breakpoint-up(xl) {
@@ -195,9 +204,10 @@ button.bgcolor3:hover {
 #background {
   pointer-events: none;
   position: absolute;
-  min-height: 100%;
-  min-width: 100%;
-  z-index: -1;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
 
 .btn:hover,
